[BUGFIX] Fixed issue with wrapping title in snippet preview

--- a/Resources/Private/SCSS/YoastTYPO3.scss
+++ b/Resources/Private/SCSS/YoastTYPO3.scss
@@ -96,6 +96,10 @@ $color_headings: #000;
 }
 
 .snippet_container {
+	.title {
+		white-space: nowrap;
+	}
+
 	.down_arrow {
 		display: none;
 	}
